[package]
authors = ["Maximilian Krüger <kruemaxi@gmail.com>"]
description = "nothing to see here. move along."
documentation = "https://snd.github.io/onmf/onmf/index.html"
homepage = "https://github.com/snd/onmf"
keywords = []
license = "MIT"
name = "onmf"
readme = "README.md"
repository = "https://github.com/snd/onmf.git"
version = "0.1.0"

[dependencies]
image = "0.6.1"
nalgebra = "0.4.0"
quick-error = "0.2.1"
rand = "0.3.12"
